# UweSub

./: CMakeLists.txt  README  Todo.txt
cmake/: python.cmake  utils.cmake
data/: CMakeLists.txt
data/PlayerConfigs/: CompassTest.cfg  DepthSensorTest.cfg  PingerTest.cfg  PositionSim.cfg  RealSub.cfg  RealSubAcer.cfg  SonarTest.cfg  SubSim.cfg
data/Sequences/: BRLSimTest.yaml
data/SubControllerConfigs/: Demo.cfg  RealWorld.cfg  RealWorldRemote.cfg  SmallPool.cfg  SmallPoolRemote.cfg  SubSim.cfg
doc/: MeasuringFOV.txt  SPI_RoBoard_To_Arduino.txt
doc/Micron/: Autorun.inf  launchManuals.bat
report/Figures/: Gantt Chart.ods  Mind.odg  stateVariables.odf
scripts/: GroundTruth.py  GroundTruthEntry.py  ScriptedSubController.py  SubController.py  SubControllerGui.py  TrackerTest.py  keyframes.yaml  movieToImages.py
scripts/BRLControl/: BRLControl.glade  BRLControl.py
scripts/BuoyGroundTruth/: __init__.py
scripts/ColourTracker/: __init__.py  bouy_finder.py
scripts/ControlScripts/: BounceScript.py  DataLoggerScript.py  DepthTest.py  DepthTestScript.py  HailMaryScript.py  ImageCaptureScript.py  OrangeBallScript.py  QualifyingRunScript.py  TimeBasedGatesScript.py  __init__.py
scripts/Controllers/: Arbitrator.py  DepthControl.py  KillMotors.py  PitchControl.py  YawControl.py  __init__.py
scripts/GroundTruth/: GroundTruth.py
scripts/Logger/: __init__.py
scripts/Maths/: __init__.py
scripts/MonkeyDials/: MonkeyDials.glade  MonkeyDials.py  __init__.py
scripts/PingerViewer/: PingerViewer.glade  PingerViewer.py
scripts/Profiling/: __init__.py
scripts/SonarLocator/: CornerFinder.py  CornerFinderTest.glade  CornerFinderTest.py  SonarLocator.py  SonarLocatorTest.py  __init__.py
scripts/SonarScanner/: __init__.py
scripts/SonarViewer/: SonarViewer.glade  SonarViewer.py
scripts/Steering/: SteerToTarget.py  Wander.py  __init__.py
scripts/StressTest/: StressTest.glade  StressTest.py
scripts/SubCompassJoy/: SubCompassJoy.glade  SubCompassJoy.py  __init__.py
scripts/SubControllerConfig/: __init__.py
scripts/SubJoy/: SubJoy.glade  SubJoy.py  __init__.py
scripts/SubMotorControl/: SubMotorControl.glade  SubMotorControl.py
scripts/TestSequence/: __init__.py
scripts/TestSequenceRecorder/: TestSequenceRecorder.glade  TestSequenceRecorder.py
scripts/TrajectoryViewer/: TrajectoryEstimator.py  TrajectoryViewer.glade  TrajectoryViewer.py
scripts/Utilities/: UweFormatSAUCELog.py  UweSubActivateControl.py  UweSubInstall.py  UweSubKillControl.py  sshConnection.py  wirelesstest.py
src/: CMakeLists.txt  Common.h  main.cpp
src/Arduino/DepthSensor/: DepthSensor.h  DepthSensor.pde
src/ColourTracker/: CMakeLists.txt  ColourTracker.cpp  ColourTracker.h
src/Common/: CMakeLists.txt  HighPrecisionTime.cpp  HighPrecisionTime.h  MathUtils.cpp  MathUtils.h  Utils.cpp  Utils.h
src/CornerFinder/: CMakeLists.txt  CornerFinder.cpp  CornerFinder.h
src/PythonInterface/: CMakeLists.txt  RoBoardControl.cpp  imgproj.cpp  imgproj.h
src/UweSubPlugin/: CMakeLists.txt  CompassDriver.cpp  CompassDriver.h  DepthSensorDriver.cpp  DepthSensorDriver.h  MotorDriver.cpp  MotorDriver.h  PingerDriver.cpp  PingerDriver.h  Position3DInterface.cpp  Position3DInterface.h  SonarDriver.cpp  SonarDriver.h  UweSubDriver.cpp  UweSubDriver.h  UweSubInterface.cpp  UweSubInterface.h  UweSubPlugin.cpp
src/UweSubPlugin/DataStructures/: Micron.cpp  Micron.h  PICComm.cpp  PICComm.h  PICPacket.h  RollingBuffer.cpp  RollingBuffer.h  TritecPacket.h  microncmds.cpp  microncmds.h  picmsgs.h
unitTests/: RollingBufferTests.h
upstart/: UweSubControl.conf  UweSubPlayer.conf
